[package]
name = "expert-spoon"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
description = "A short description of our package"
authors = ["Botani <karzan@botani.nu>", "Majvall <dennis.majvall@gmail.com>", "Ek <jesperek@fastmail.com>"]
readme = "README.md"
homepage = ""
repository = "https://github.com/Flavor-of-the-Code/expert-spoon"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
